Changed font color on element in aside for contrast ration issue

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -280,7 +280,7 @@
 
       & label {
         border-radius: 1.25rem;
-        color: var(--mountain-mist);
+        color: var(--mountain-slate);
         cursor: pointer;
         flex: 1;
         font-size: 0.85rem;
